fixed redundant scrollbars on some useragents
stop using windows im begging you

--- a/includes/globals/doe.css
+++ b/includes/globals/doe.css
@@ -87,7 +87,8 @@ main {
 }
 
 .content {
-	overflow: scroll;
+	overflow-y: auto;
+	overflow-x: hidden;
 }
 
 .titlebar {
